// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a small variant of the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-small Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component in loading state 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <svg
    aria-label="Loading component..."
    class="SkeletonContainer"
    data-test-id="cf-ui-skeleton-form"
    height="100%"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    width="240"
  >
    <title>
      Loading component...
    </title>
    <rect
      clip-path="url(#cf-ui-skeleton-clip-0)"
      height="100%"
      style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="cf-ui-skeleton-clip-0"
      >
        <rect
          data-test-id="cf-ui-skeleton-image"
          height="70"
          rx="0"
          ry="0"
          width="70"
          x="85"
          y="100"
        />
        <rect
          height="16"
          rx="0"
          ry="0"
          width="100"
          x="70"
          y="190"
        />
      </clippath>
      <lineargradient
        id="cf-ui-skeleton-clip-gradient-1"
      >
        <stop
          offset="0%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            dur="2s"
            id="animation-2"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#f7f9fa"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.25s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.5s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`renders the component with a custom drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div>
  <div
    aria-label="picture of a cat"
    class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
    data-test-id="cf-ui-asset-card"
    title="picture of a cat"
  >
    <div
      class="CardDragHandle"
      data-test-id="cf-ui-card-drag-handle"
    >
      <svg
        class="emotion-0"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="CardDragHandle__sr-label"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="AssetCard__wrapper"
    >
      <div
        class="AssetCard__header"
      />
      <div
        class="AssetCard__content"
      >
        <div
          class="Asset AssetCard__asset"
          data-test-id="cf-ui-asset"
        >
          <div
            class="Asset__image-container"
          >
            <img
              alt="picture of a cat"
              class="Asset__image-container__image"
              src="https://via.placeholder.com/200x300"
            />
          </div>
          <div
            class="Asset__title-container"
          >
            <span
              class="Asset__title-container__title"
            >
              picture of a cat
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with actions 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Dropdown AssetCard__actions"
        data-test-id="cf-ui-card-actions"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="IconButton IconButton--secondary"
          data-node-id="dropdown-trigger-61728000"
          data-test-id="cf-ui-icon-button"
          type="button"
        >
          <span
            class="emotion-1 IconButton__inner"
            tabindex="-1"
          >
            <svg
              class="IconButton__icon emotion-0"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="IconButton__label"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with status 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #BD002A;
  background-color: #FFF2F2;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

.emotion-1 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="emotion-0"
        data-test-id="cf-ui-badge"
      >
        archived
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__asset-container"
        >
          <div
            class="Asset__illustration-container"
          >
            <svg
              class="AssetIcon emotion-1"
              data-test-id="cf-ui-asset-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                clip-rule="evenodd"
                d="M.5 0a.5.5 0 00-.5.5v23a.5.5 0 00.5.5h19a.5.5 0 00.5-.5v-17a.5.5 0 00-.146-.354l-6-6A.5.5 0 0013.5 0H.5zM1 23V1h12v5.5a.5.5 0 00.5.5H19v16H1zM18.293 6L14 1.707V6h4.293z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.053 10.503a.5.5 0 01.427.356l2.5 8.5a.5.5 0 01-.48.641h-10a.5.5 0 01-.447-.724l2.5-5a.5.5 0 01.8-.13l1.528 1.528 2.68-4.913a.5.5 0 01.492-.258zm-.192 1.796l-2.422 4.44a.5.5 0 01-.793.114l-1.509-1.509L5.309 19h8.523l-1.971-6.7zM6 8a1 1 0 100 2 1 1 0 000-2zM4 9a2 2 0 114 0 2 2 0 01-4 0z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <span
            class="Asset__asset-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component without actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
